--- a/template.html
+++ b/template.html
@@ -15,13 +15,39 @@
         <script src="<%=js%>"></script>
         <% } %>
         <style>
-            html,
-            body {
+            body,
+            html {
                 height: 100%;
                 width: 100%;
                 overflow: hidden;
                 margin: 0;
                 padding: 0;
+                -webkit-appearance: none;
+                -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+                scroll-behavior: smooth;
+            }
+
+            body {
+                line-height: 1.6;
+                font-family: -apple-system-font, BlinkMacSystemFont, 'Helvetica Neue', 'PingFang SC', 'Hiragino Sans GB',
+                    'Microsoft YaHei UI', 'Microsoft YaHei', Arial, sans-serif;
+                font-size: 16px;
+            }
+
+            body,
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            p,
+            ul,
+            ol,
+            dl,
+            dd,
+            fieldset,
+            textarea {
+                margin: 0;
             }
         </style>
     </head>
